# gaussianSplatting

./: CMakeLists.txt  CMakePresets.json  LICENSE
DX12Lib/: CMakeLists.txt
DX12Lib/Resources/Shaders/: GenerateMips_CS.hlsl
DX12Lib/inc/dx12lib/: CommandList.h
DX12Lib/src/: CommandList.cpp
assets/: plush_100pct_m0.01.splat  plush_100pct_m0.015.splat  plush_100pct_m0.02.splat  plush_10pct.splat  plush_10pct_m0.005.splat  plush_10pct_m0.01.splat  plush_10pct_m0.015.splat  plush_10pct_m0.02.splat  plush_25pct.splat  plush_25pct_m0.005.splat  plush_25pct_m0.01.splat  plush_25pct_m0.015.splat  plush_25pct_m0.02.splat  plush_50pct_m0.005.splat  plush_50pct_m0.01.splat  plush_50pct_m0.015.splat  plush_50pct_m0.02.splat  plush_75pct_m0.01.splat  plush_75pct_m0.015.splat  plush_75pct_m0.02.splat
shaders/: BitonicSort.hlsl  PixelShader.hlsl  VertexShader.hlsl
src/: Benchmark.cpp  Benchmark.h  Camera.cpp  Camera.h  Globals.h  Screenshot.cpp  Screenshot.h  SplatLoader.cpp  SplatLoader.h  compare_fidelity.py  generate_graphs.py  main.cpp  preprocess_splats.py
